RDCC-4453: addressing Sonar Issues in SuperController.java