@@ -299,8 +299,7 @@ public abstract class SuperController {
         }
 
         var organisationMinimalInfoResponses =
-                organisations.stream().map(organisation -> new OrganisationMinimalInfoResponse(organisation, address))
-                        .collect(Collectors.toList());
+                organisations.stream().map(organisation -> new OrganisationMinimalInfoResponse(organisation, address)).toList();
 
         return ResponseEntity.status(200).body(organisationMinimalInfoResponses);
     }
